--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "email-validator": "^2.0.4",
     "inquirer": "^9.2.12",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "rxjs": "^7.8.1"
   }
 }
