--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "dependencies": {
     "email-validator": "^2.0.4",
     "inquirer": "^9.2.12",
-    "jest": "^29.7.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "vite-jest": "^0.1.4"
+  },
+  "scripts": {
+    "test": "vite-jest"
   }
 }
