--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "email-validator": "^2.0.4",
     "inquirer": "^9.2.12",
     "rxjs": "^7.8.1",
-    "vite-jest": "^0.1.4"
+    "vite-jest": "^0.1.4",
+    "phone": "^3.1.42"
   },
   "scripts": {
     "test": "vite-jest"
